--- a/package.json
+++ b/package.json
@@ -4,14 +4,31 @@
   "description": "Rest Api Demo Using Express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node ./build/index.js",
+    "start:dev": "nodemon --exec babel-node ./index.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./index.js -s",
+    "build": "npm run clean && npm run build-babel"
   },
   "author": "Amit",
-  "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/node": "^7.15.4",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/runtime": "^7.15.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.0.7",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "babel-core": "^7.0.0-bridge.0"
   }
 }
